--- a/styles.css
+++ b/styles.css
@@ -1235,11 +1235,11 @@ circle.foreground {
 }
 
 .project-title {
-    color: #FFFFFF;
+    color: #FFC1CC;
     font-size: 1.5rem;
     font-weight: 600;
     text-transform: uppercase;
-    text-shadow: 0 0 5px #FFC1CC;
+    text-shadow: 0 0 20px #FFFFFF;
     transition: text-shadow 0.3s ease;
 }
 
