--- a/styles.css
+++ b/styles.css
@@ -1649,7 +1649,7 @@ circle.foreground {
 }
 
 .info-card:hover {
-    transform: translateX(10px);
+    transform: translateX(5px);
     box-shadow: 0 0 15px #FF9999;
     border-color: #FF9999;
 }
@@ -1744,7 +1744,6 @@ circle.foreground {
     width: 350px;
     font-weight: 700;
     padding: 12px 30px;
-    border-radius: 20px;
     text-transform: uppercase;
     letter-spacing: 1px;
     transition: all 0.3s ease;
@@ -1754,7 +1753,7 @@ circle.foreground {
 .contact-form .btn-send:hover {
     background: #FF9999;
     border-color: #FF9999;
-    color: #FFFFFF;
+    color: #0A0A0A;
     box-shadow: 0 0 15px #FFC1CC;
 }
 
