--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ header {
     top: 0;
     z-index: 999;
     box-shadow: 0 2px 5px #1B1B1B;
+    background: #0A0A0A;
 }
 
 /* Header inner container */
